--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Frederick Business Directory</title>
     
     <!-- Favicons -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="/favicon-512x512.png">
+    <link rel="icon" type="image/x-icon" href="/app/static/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="/app/static/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/app/static/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="/app/static/favicon-48x48.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/app/static/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/app/static/favicon-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/app/static/favicon-512x512.png">
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
