feat: Enhance chart layout for better responsiveness and visual clarity

--- a/index.html
+++ b/index.html
@@ -90,22 +90,24 @@
                                         <div id="myGrid" class="ag-theme-alpine"></div>
                                     </div>
                                 </div>
-                                <!-- Charts: Full width at bottom on ALL screen sizes -->
+                                <!-- Charts: Horizontal layout on desktop, stacked on mobile -->
                                 <div class="row">
-                                    <div class="col-12 mb-3">
-                                        <div id="d3-charts" class="border rounded p-3">
-                                            <div class="chart-container">
-                                                <div class="chart-title">Top 10 Business Categories</div>
-                                                <div id="category-chart"></div>
-                                            </div>
-                                            <div class="chart-container">
-                                                <div class="chart-title">Businesses by Employee Count</div>
-                                                <div id="employee-chart"></div>
-                                            </div>
-                                            <div class="chart-container">
-                                                <div class="chart-title">Address Distribution</div>
-                                                <div id="address-chart"></div>
-                                            </div>
+                                    <div class="col-12 col-lg-4 mb-3">
+                                        <div class="chart-container border rounded p-3">
+                                            <div class="chart-title">Top 10 Business Categories</div>
+                                            <div id="category-chart"></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-lg-4 mb-3">
+                                        <div class="chart-container border rounded p-3">
+                                            <div class="chart-title">Businesses by Employee Count</div>
+                                            <div id="employee-chart"></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-lg-4 mb-3">
+                                        <div class="chart-container border rounded p-3">
+                                            <div class="chart-title">Address Distribution</div>
+                                            <div id="address-chart"></div>
                                         </div>
                                     </div>
                                 </div>
